--- a/package.json
+++ b/package.json
@@ -39,28 +39,33 @@
     "@types/body-parser": "^1.19.0",
     "@types/cookie-parser": "^1.4.2",
     "@types/cors": "^2.8.10",
+    "@types/eslint": "^7.2.10",
     "@types/express": "^4.17.11",
     "@types/multer": "^1.4.5",
     "@types/node": "^15.0.1",
+    "@types/prettier": "^2.2.3",
+    "@types/superagent": "^4.1.10",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
     "@typescript-eslint/parser": "^4.22.0",
     "babel-preset-env": "^1.7.0",
-    "codecov": "^3.8.0",
+    "codecov": "^3.8.2",
     "eslint": "^7.25.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-config-prettier": "^6.12.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-node": "^11.1.0",
-    "husky": "^4.3.0",
+    "husky": "^6.0.0",
     "jest": "^26.6.3",
     "jest-coverage-badges": "^1.1.2",
-    "lint-staged": "^10.4.0",
-    "prettier": "^2.1.2",
+    "lint-staged": "^10.5.4",
+    "prettier": "^2.2.1",
     "superagent": "^6.1.0",
     "supertest": "^6.1.3",
-    "ts-jest": "^26.4.1",
+    "ts-jest": "^26.5.5",
     "ts-node": "^9.1.1",
     "ts-node-dev": "^1.1.6",
+    "typedoc": "^0.20.36",
     "typescript": "^4.2.4"
   }
 }
