--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,12 +5,11 @@
     "removeComments": true,
     "sourceMap": true,
     "outDir": "./dist",
-    "rootDir": "./src",
     "strict": true,
     "noImplicitAny": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "include": ["./src/**/*"]
+  "include": ["src/**/*", "tests/**/*"]
 }
